Fix minor bugs on mobile

--- a/project/about/assets/css/about.scss
+++ b/project/about/assets/css/about.scss
@@ -90,6 +90,9 @@ body {
 .team_container {
   width: 100%;
   height: 100%;
+
+  font-size: 90%;
+
   left: 0px;
   top: 0px;
   position: relative;
@@ -199,7 +202,7 @@ body {
 
 .team_item_mobile:nth-child(1) {
   left: 8%;
-  top: 28%;
+  top: 30%;
 }
 
 .team_item_mobile:nth-child(2) {
